# RecallOps

./: .env.example  .gitignore  AGENTS.md  BLOG_TRACK.md  COGNEE_EXAMPLES_MAP.md  CONTEXT_LEDGER_DEMO.md  IMPLEMENTATION_PLAN.md  KICKOFF_FINDINGS.md  Makefile  README.md  REFERENCE_REPOS.md  STRATEGY.md  liveStreamTranscript.md  opencode.json  pyproject.toml  vercel.json
.codex/: config.toml
demo/auth-migration-repo/: README.md  package.json
demo/auth-migration-repo/docs/: legacy-auth.md  security-review.md
demo/auth-migration-repo/src/: logout.test.ts  logout.ts
src/recallops/: __init__.py  api.py  config.py  errors.py  gateway.py  logging.py  main.py  mcp_server.py  models.py  runtime.py  seed.py  service.py  store.py
tests/: test_api.py  test_gateway.py  test_logging.py  test_models.py  test_service.py
web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
web/src/: App.tsx  Landing.tsx  api.ts  landing.css  main.tsx  styles.css  types.ts
